# rtoml

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  build-wheel.sh  example.py  install-rust.sh  parse_dt.py  pyproject.toml  run.py  run.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  install-rust.sh
benchmarks/: README.md  bad-data.toml  data.toml  run.py
python/rtoml/: __init__.py
rtoml/: __init__.py  _rtoml.pyi  rust_rtoml.pyi  utils.py  version.py
src/: datetime.rs  de.rs  lib.rs  py_type.rs  ser.rs
tests/: requirements-linting.txt  requirements.txt  test_benchmarks.py  test_dump.py  test_load.py  test_misc.py  test_order.py  toml_test.py  toml_test_decoding.py  toml_test_encoding.py
