[package]
name = "rtoml"
version = "0.8.0"
authors = ["Samuel Colvin <s@muelcolvin.com>"]
edition = "2018"

[dependencies]
toml = {version = "0.5.9", features = ["preserve_order"]}
serde = "1.0.126"
pyo3 = {version = "0.17.3", features = ["extension-module"]}
mimalloc = { version = "0.1.29", default-features = false }

[lib]
name = "_rtoml"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
name = "rtoml._rtoml"

[profile.release]
lto = "fat"
codegen-units = 1
