[package]
name = "rtoml"
version = "0.11.0"
authors = ["Samuel Colvin <s@muelcolvin.com>"]
edition = "2021"

[dependencies]
toml = {version = "0.5.9", features = ["preserve_order"]}
serde = "1.0.126"
pyo3 = "0.21.2"
ahash = "0.8.1"
nohash-hasher = "0.2.0"

[lib]
name = "_rtoml"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"
codegen-units = 1
